--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cross-env": "^5.2.0",
     "node-sass": "^4.9.4",
+    "npm": "^6.4.1",
     "nuxt": "^2.0.0",
     "sass-loader": "^7.1.0"
   },
